# Deep-Learning-Library

./: CMakeLists.txt  DLL run command .rtf  LICENSE  README.md  dataset_verification.py  project_structure.txt  pytorch_comparison.py
cmake/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile
cmake/cmake/: Makefile
cmake/tests/: CTestTestfile.cmake  Makefile
include/CaberNet/: functions.h  layers.h  optimizers.h  tensor.h
src/: functions.cpp  layers.cpp
src/internals/: internal_tensor.hpp
src/internals/functions/: internal_function_conv2d.cpp  internal_function_flatten.cpp  internal_function_maxpool2d.cpp  internal_functions.hpp
src/tensor/: tensor_float.cpp
tests/: CMakeLists.txt  function_softmax.cpp  test.cpp  test_conv2d.cpp  test_conv2d_backup.cpp
